# HPC

./: .gitignore  README.md  utils.cu
convolution1D/: CMakeLists.txt  README.md  times
convolution1D/src/: convolution.cu
convolution2D/: CMakeLists.txt  README.md
convolution2D/src/: conv_constant_memory.cu  conv_global_memory.cu  conv_shared_memory.cu  convolution.cu
convolution2D/test/: bar.html  bar5.tsv  bar9.tsv  clean.tsv  clean_times.cc  index.html  run_test.sh  speed-up.tsv  speed-up2.tsv  times
final_task/: CMakeLists.txt  Makefile  README.md  launcher  nfft.cc  stop  times.csv
final_task/src/: generator.cc  nfft.cu  sequential.cu  tasksink.cc  tasksink.cu  taskven.cu  taskworker.cu
final_task/test/: index.html  times.csv  times2.csv
matrix_mult/: CMakeLists.txt  README.md  gettimes.sh  plotter.py
matrix_mult/src/: mult.cu
matrix_mult/test/: generator.cc
matrix_mult_tiled/: CMakeLists.txt  README.md  plotter.py
matrix_mult_tiled/src/: mult.cu  mult_float.cu
matrix_mult_tiled/test/: generator_float.cc
prefix_sum/: CMakeLists.txt  README.md
prefix_sum/src/: prefix_sum.cu
