cmake_minimum_required(VERSION 2.8)
find_package(CUDA QUIET REQUIRED)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_35)
cuda_add_executable(global_mem src/conv_global_memory.cu)
cuda_add_executable(shared_mem src/conv_shared_memory.cu)
cuda_add_executable(constant_mem src/conv_constant_memory.cu)
