cmake_minimum_required(VERSION 2.8)
find_package(CUDA QUIET REQUIRED)
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_35)
cuda_add_executable(mult src/mult.cu)
cuda_add_executable(mult_float src/mult_float.cu)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11")
add_executable(generator test/generator.cc)
add_executable(generator_float test/generator_float.cc)
